# agentes_ia_langGraph

./: .gitignore  README.md  langgraph.json  pyproject.toml
notebooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chaining.ipynb  07_structured_ouput.ipynb  09-prompting.ipynb  10-tools.ipynb  11-conditions.ipynb  12-paralellization.ipynb  13-random.ipynb  97-mesaggesStates.ipynb  98-type_dict.ipynb  99-state_practica.ipynb
src/agents/: main.py  practica_simple.py  rag.py  simple.py
src/agents/support/: agent.py  code_review.py  evaluator.py  orchestrator.py  react.py  state.py
src/agents/support/nodes/booking/: node.py  prompt.py  tools.py
src/agents/support/nodes/conversation/: node.py  prompt.py  tools.py
src/agents/support/nodes/extractor/: node.py  prompt.py
src/agents/support/routes/intent/: prompt.py  reoute.py
src/api/: main.py
